# liferay-docker-manager

./: .coverage  .gitignore  .ldm-verify-tmp-20260716-143405.txt  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  compatibility.json  diff.txt  fix_tests.py  issue_url.txt  ldm  ldm-macos.spec  ldm.bat  liferay_docker.py  lint.sh  mkdocs.yml  mypy.ini  patch_ai.py  patch_mcp.py  patch_test.py  plan_coverage.md  pyproject.toml  requirements-dev.txt  requirements.txt  scratch.md  terminal-colors.txt  test.bat  test_debug.py  verify-apple-silicon-macos-11-colima-pass-ef9152ad.txt
.agents/: AGENTS.md
.gemini/: gemini.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cleanup-tags.yml  generate-seeded-states.yml  prioritize-issues.yml  release-e2e.yml  scheduled-verification.yml
common/: README.md  com.liferay.frontend.js.web.internal.session.timeout.configuration.SessionTimeoutConfiguration.scoped~3e124e46-69f0-4ebd-a3be-43b3de16f45a.config  env-blacklist.txt  portal-ext.properties  portal-log4j-ext.xml
conductor/: PR_MERGE_PLAN.md  cascading-defaults-plan.md  cloud-fetch-spec.md  e2e-reliability-plan.md  guided-onboarding-plan.md  hardening-ux-plan.md  index.md  ldm-scale.md  on-demand-samples.md  osgi-performance-plan.md  quality-adoption-plan.md  remote-import-packaging-codeql-fix.md  samples-support.md  snapshot-integrity-plan.md  stack-refactor-windows-fix.md  tracks.md
docker-compose-templates/elasticsearch/: docker-compose.yml
docker-compose-templates/liferay/: docker-compose.yml
docker-compose-templates/wordpress/: docker-compose.yml
docs/: COMPATIBILITY_TABLE.md  INSTALLATION.md  LDM_ARCHITECTURE.md  PLAYBOOK.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  THIRD_PARTY_TOOLS.md  TROUBLESHOOTING.md  VALIDATION_PLAN.md  installation.md  roadmap.md
docs/explanation/: architecture.md  conventions.md  faq.md  properties.md
docs/guides/: ADVANCED_CLI.md  AI_MCP_GUIDE.md  CLI_REFERENCE.md  CONFIGURATION.md  CONVENTIONS_AND_FEATURES.md  DATA_MANAGEMENT.md  DEVELOPMENT.md  FAQ.md  NETWORKING_DNS.md  NGROK_INTEGRATION.md  PAAS_LOCAL_DEV.md  PROPERTIES_HIERARCHY.md  QA.md  SHARING_AND_TUNNELS.md  VERSION_UPGRADES.md  WORKSPACE_IMPORT_AND_PACKAGING.md
docs/how-to/: ai_mcp_guide.md  custom_containers.md  data_management.md  development.md  e2e_testing.md  install_linux.md  install_macos.md  install_windows.md  multi_compose.md  runtime_overrides.md  sharing_tunnels.md  vanilla_start.md  version_upgrades.md  workspace_import.md
docs/reference/: advanced_cli.md  compatibility.md  configuration.md  logging-strategy.md  networking.md  security.md  third_party_tools.md
docs/showcase/: OSGI_STATE_PERSISTENCE.md  README.md
docs/tutorials/: paas_local_dev.md  quick_start.md  workspace_development.md
jira/todo/: LPS-DRAFT-PYDANTIC-CORE-CORRUPTION.md  LPS-DRAFT-TRAEFIK-VIRTIOFS-INOTIFY.md
ldm_core/: cli.py  constants.py  defaults.py  docker_service.py  manager.py  plugin_manager.py  ui.py  ui_colors.py  utils.py
ldm_core/dashboard/: server.py
ldm_core/diagnostics/: completions.py  doctor.py  info.py  prune.py  upgrade.py
ldm_core/gui/: tray.py
ldm_core/handlers/: ai.py  assets.py  base.py  cloud.py  composer.py  config.py  dashboard.py  database.py  dev.py  diagnostics.py  infra.py  license.py  mcp.py  runtime.py  share.py  snapshot.py  stack.py  system.py  tray.py  validation.py  validation.py.bak  workspace.py
ldm_core/pipelines/: base.py  import_pipeline.py  run.py  validation.py
ldm_core/resources/: infra-compose.yml  ldm.1
ldm_core/runtime/: fragments.py  logs.py  orchestration.py  readiness.py  search.py
ldm_core/snapshot/: archive.py  custom_containers.py  database.py  search.py  utils.py  volumes.py
ldm_core/tests/: conftest.py  e2e_ui_fragments.py  test_ai.py  test_architectural_contracts.py  test_assets.py  test_base.py  test_cli_disambiguation.py  test_cli_drift.py  test_cli_entrypoint.py  test_cli_logic.py  test_cloud.py  test_composer.py  test_config.py  test_config_safe.py  test_dashboard.py  test_database.py  test_defaults.py  test_dev.py  test_diagnostics.py  test_docker_service.py  test_downgrade.py  test_dry_run.py  test_dry_run_vfs_leak.py  test_e2e_diagnostics.py  test_e2e_interactive.py  test_e2e_workspace.py  test_fragments.py  test_get_version.py  test_hostname_resolution_di.py  test_import_pipeline.py  test_infra.py  test_license.py  test_lock.py  test_logs.py  test_mcp.py  test_orchestration.py  test_pipelines.py  test_plugin_manager.py  test_readiness.py  test_run_pipeline.py  (+14 more)
ldm_core/workspace/: fork.py  hydration.py  importer.py  metadata.py  monitor.py  quickstart.py  utils.py  versioning.py
references/: help_output.txt  liferay_help.txt  portal-log4j.xml
references/samples/: metadata.json
references/test-project/: meta
references/verification-results/: ldm-verify-fedora.mac.lan-20260428-135701.txt  ldm-verify-peters-mbp.lan-20260428-135458.txt  (+52 more)
scripts/: agent_push.sh  append_timestamps.py  check_cli_drift.py  check_docs_review.py  check_markdown_links.py  check_version_sync.py  collect-samples.sh  colors.sh  deploy-samples.sh  get_release_tags.py  get_version.py  ldm-doctor.sh  package-pyinstaller.sh  package-shiv.sh  prioritize_issues.py  prune_old_seeds.py  rebuild_history.py  rebuild_safe.py  redact_reports.py  release.py  run_local_smoke.sh  run_python.sh  run_smoke_tests.sh  setup_pre_commit.sh  simulate_hardening.py  sync_baseline.py  sync_colors.py  sync_compatibility.py  sync_docs.py  sync_reports_pipeline.sh  test_ui.py  validate_compose.py  verify_e2e_refactor.ps1  verify_e2e_refactor.sh  verify_edge_cases.sh  verify_osgi_persistence.sh
seeded-2026_q1_4-lts-mysql/: .liferay-docker.deployed  docker-compose.yml
verification-results-fedora/: verify-linux-workstation-fedora-44-native-docker-fail.txt
verification-results-ubuntu/: verify-linux-workstation-ubuntu-24.04-native-docker-fail.txt
(+97 files in other folders)
