[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liferay-docker-manager"
version = "2.4.7"



description = "A professional command-line orchestrator for Liferay Docker environments."
authors = [{ name = "Peter Richards", email = "peter.richards@liferay.com" }]
requires-python = ">=3.10"
dependencies = [
    "watchdog==4.0.2",
    "requests==2.33.0",
    "PyYAML==6.0.2",
    "argcomplete==3.5.3",
    "pyobjc-framework-FSEvents; sys_platform == 'darwin'"
]

[project.scripts]
ldm = "ldm_core.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ldm_core = ["resources/common_baseline/*", "resources/infra-compose.yml", "resources/ldm.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ldm_core*"]
