[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liferay-docker-manager"
version = "2.4.26-beta.44"



description = "A professional command-line orchestrator for Liferay Docker environments."
authors = [{ name = "Peter Richards", email = "peter.richards@liferay.com" }]
license = { text = "MIT" }
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog==4.0.2",
    "requests==2.33.0",
    "PyYAML==6.0.2",
    "argcomplete==3.5.3",
]

[project.scripts]
ldm = "ldm_core.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ldm_core = ["resources/common_baseline/*", "resources/infra-compose.yml", "resources/ldm.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ldm_core*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "PL",   # pylint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long (fix gradually)
    "PLC0415", # localized imports (intentional for performance/dependency isolation)
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value in comparison
    "B904",    # Within an except clause, raise exceptions with raise ... from err
    "N806",    # Variable name should be lowercase
    "PTH123",  # open() should be replaced by Path.open()
    "RUF001",  # Ambiguous unicode character
    "PLR0911", # Too many return statements
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "ARG004",  # Unused static method argument
    "PTH110",  # os.path.exists()
    "PTH105",  # os.replace()
    "PTH101",  # os.chmod()
    "PTH112",  # os.path.isdir()
    "PTH118",  # os.path.join()
    "PTH107",  # os.remove()
    "PTH104",  # os.rename()
    "PTH108",  # os.unlink()
    "PTH109",  # os.getcwd()
    "PTH120",  # os.path.dirname()
    "SIM105",  # Use contextlib.suppress
    "SIM117",  # Use single with statement
    "SIM102",  # Use single if statement
    "PLW2901", # for loop variable overwritten
    "PLW1510", # subprocess.run without check
    "PLE2513", # Invalid unescaped character ESC
    "SIM108",  # Use ternary operator
    "PTH208",  # Path.iterdir()
    "PTH121",  # Path.samefile()
    "B018",    # Useless expression
    "PLC0206", # Extracting value without items()
    "F841",    # Unused variable
    "RUF059",  # Unused unpacked variable
]

[tool.ruff.lint.isort]
known-first-party = ["ldm_core"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.pytest.ini_options]
testpaths = ["ldm_core/tests"]
python_files = "test_*.py"
addopts = "--cov=ldm_core --cov-report=term-missing --cov-fail-under=40"

[tool.coverage.run]
source = ["ldm_core"]
omit = ["ldm_core/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
