[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liferay-docker-manager"
# LDM_MAGIC_VERSION: 2.15.18-pre.9
version = "2.15.19-pre.5"





description = "A professional command-line orchestrator for Liferay Docker environments."
authors = [{ name = "Peter Richards", email = "peter.richards@liferay.com" }]
license = { text = "MIT" }
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog==6.0.0",
    "pyobjc-framework-FSEvents; sys_platform == 'darwin'",
    "requests==2.34.2",
    "PyYAML==6.0.3",
    "argcomplete==3.7.0",
    "flask==3.1.3",
    "mcp==1.28.1",
    "packaging>=23.1",
    "keyring==25.7.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.scripts]
ldm = "ldm_core.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ldm_core = ["resources/common_baseline/*", "resources/dashboard/*", "resources/infra-compose.yml", "resources/ldm.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ldm_core*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "PL",   # pylint
    "RUF",  # Ruff-specific rules
    "C90",  # mccabe
]
ignore = [
    "E501",    # Line too long (fix gradually)
    "PLC0415", # localized imports (intentional for performance/dependency isolation)
    "PLR2004", # Magic value in comparison
    "B904",    # Within an except clause, raise exceptions with raise ... from err
    "N806",    # Variable name should be lowercase
    "PTH123",  # open() should be replaced by Path.open()
    "RUF001",  # Ambiguous unicode character
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "ARG004",  # Unused static method argument
    "PTH110",  # os.path.exists()
    "PTH105",  # os.replace()
    "PTH101",  # os.chmod()
    "PTH112",  # os.path.isdir()
    "PTH118",  # os.path.join()
    "PTH107",  # os.remove()
    "PTH104",  # os.rename()
    "PTH108",  # os.unlink()
    "PTH109",  # os.getcwd()
    "PTH120",  # os.path.dirname()
    "SIM105",  # Use contextlib.suppress
    "SIM117",  # Use single with statement
    "SIM102",  # Use single if statement
    "PLW2901", # for loop variable overwritten
    "PLE2513", # Invalid unescaped character ESC
    "SIM108",  # Use ternary operator
    "PTH208",  # Path.iterdir()
    "PTH121",  # Path.samefile()
    "B018",    # Useless expression
    "PLC0206", # Extracting value without items()
    "RUF059",  # Unused unpacked variable
]

[tool.ruff.lint.isort]
known-first-party = ["ldm_core"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 6
max-statements = 60

[tool.pytest.ini_options]
testpaths = ["ldm_core/tests"]
python_files = "test_*.py"
addopts = "--cov=ldm_core --cov-report=term-missing --cov-fail-under=40"

[tool.coverage.run]
source = ["ldm_core"]
omit = ["ldm_core/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.deptry]
extend_exclude = [
    "ldm_core/tests",
    "scripts"
]
